--- a/frontend/taskpro/src/index.css
+++ b/frontend/taskpro/src/index.css
@@ -1,3 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
@@ -6,4 +18,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+img,
+svg {
+  display: block;
+  max-width: 100%;
 }
